# NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md
Debug/: TrainingData.txt
Network/: CMakeLists.txt
Network/include/: FileTrainingData.h  ITrainingData.h  Network.h  Neuron.h  XorTrainingData.h
Network/src/: FileTrainingData.cpp  Network.cpp  Neuron.cpp  XorTrainingData.cpp  main.cpp
XorTrainingDataGenerator/: CMakeLists.txt
XorTrainingDataGenerator/src/: XORTrainingDataGenerator.cpp
src/: FileTrainingData.cpp  Network.cpp  Neuron.cpp  XORTrainingDataGenerator.cpp  XorTrainingData.cpp  main.cpp
src/headers/: FileTrainingData.h  ITrainingData.h  Network.h  Neuron.h  XorTrainingData.h
